
********************************************************************************

  Project : SHTRIH-M JavaPOS fiscal printer driver
  Company : SHTRIH-M www.shtrih-m.ru (095) 787-6090

********************************************************************************

  January, 28 2017, 14:00
  deviceServiceVersion = 1013357
	
  [+] Added parameter fsHeaderEnabled to enable printing of company address
      after receipt header. Default value is false (not printed).

  [+] Added parameter nonFiscalHeaderEnabled to enable or disable document header 
      in nonfiscal receipt

********************************************************************************

  January, 25 2017, 22:50
  deviceServiceVersion = 1013355
	
  [+] Added parameter capJrnPresent. Method getCpJrnPresent 
      returns capJrnPresent and mode.getCapJrnPresent
	  
  [-] Changed directIO command SMFPTR_DIO_READ_FS_PARAMS
	  
********************************************************************************

  January, 24 2017, 19:40
  deviceServiceVersion = 1013353
	
  [+] Added directIO(SMFPTR_DIO_READ_FS_PARAMS) to read fiscal storage params
      public static final int SMFPTR_DIO_READ_FS_PARAMS = 0x3E;
	  
  [-] Fixed error with command "Open receipt"
  
********************************************************************************

  January, 21 2017, 23:00
  deviceServiceVersion = 1013352
	
  [-] Fixed some errors
	  
********************************************************************************

  January, 20 2017, 14:40
  deviceServiceVersion = 1013351
	
  [-] Fixed some errors
	  
********************************************************************************

  January, 18 2017, 21:30
  deviceServiceVersion = 1013349
	
  [-] Fixed error "Socket closed"
  [+] Added directIO code SMFPTR_DIO_SET_DISCOUNT_AMOUNT = 0x3D to
      set receipt discount amount. Works in discount mode 2 only.
  
********************************************************************************
