@@ -9,6 +9,6 @@ public class DIOOpenFiscalDay extends DIOItem {
 	}
 
 	public void execute(int[] data, Object object) throws Exception {
-		service.printer.check(service.printer.beginFiscalDay());
+		service.printer.openFiscalDay();
 	}
 }
