@@ -89,7 +89,7 @@ manifest.custom.codebase=
 manifest.custom.permissions=
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.6.0_24
+platform.active=JDK_1.6_45
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
