@@ -1,5 +1,5 @@
 package com.shtrih.util;
 
 public class ServiceVersion {
-    public static final String VERSION = "364-9-gf77f996";
+    public static final String VERSION = "366-3-g42b0871";
 }
